// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalculateRiskMeasurement handles inputs 1`] = `
<div>
  <form
    data-testid="form-three-1"
  >
    <hr />
    <div
      class="sc-ifAKCX dUfgxM"
    >
      <h2
        class="bp3-heading sc-bxivhb jFEWwS"
      >
        Round 1
      </h2>
      <h3
        class="bp3-heading sc-htpNat cNFUHJ"
      >
        Ballot Retrieval List: 
        379
         Total Ballots
      </h3>
      <div
        class="sc-bwzfXH izcbHX"
      >
        <p>
          Contest 
          1
          : 
          379
           ballots
        </p>
      </div>
      <button
        class="bp3-button sc-EHOje fJvKPB"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Download Aggregated Ballot Retrieval List for Round 
          1
        </span>
      </button>
      <button
        class="bp3-button sc-EHOje fJvKPB"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Download Placeholders for Round 
          1
        </span>
      </button>
      <button
        class="bp3-button sc-EHOje fJvKPB"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Download Label Sheets for Round 
          1
        </span>
      </button>
      <div
        class="sc-bdVaJa fdbLH"
      >
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Contest 1: contest name
        </h3>
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Audited Results: Round 
          1
          , Contest 
          1
           
          INCOMPLETE
        </h3>
        <div
          class="sc-bwzfXH izcbHX"
        >
          Enter the number of votes recorded for each candidate/choice in the audited ballots for Round 
          1
          , Contest 
          1
        </div>
        <div
          class="sc-gqjmRU bKjpgI"
        >
          <div
            class="sc-jTzLTM hJXymL"
          >
            <label
              class="sc-VigVT guVKvv"
              for="round-0-contest-0-choice-choice-1"
            >
              choice one
            </label>
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  id="round-0-contest-0-choice-choice-1"
                  name="contests[0][choice-1]"
                  style="padding-right: 10px;"
                  value="0"
                />
              </div>
            </div>
          </div>
          <div
            class="sc-jTzLTM hJXymL"
          >
            <label
              class="sc-VigVT guVKvv"
              for="round-0-contest-0-choice-choice-2"
            >
              choice two
            </label>
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  id="round-0-contest-0-choice-choice-2"
                  name="contests[0][choice-2]"
                  style="padding-right: 10px;"
                  value="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-bdVaJa fdbLH"
      >
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Audit Progress: 
          0
           of 
          1
           
          complete
        </h3>
      </div>
      <div
        class="sc-gZMcBi DmELe"
      >
        <button
          class="bp3-button bp3-intent-primary sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Calculate Risk Measurement
          </span>
        </button>
      </div>
      <div
        class="sc-bdVaJa fdbLH"
      />
    </div>
  </form>
</div>
`;

exports[`CalculateRiskMeasurement renders completion in first round correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        data-testid="form-three-1"
      >
        <hr />
        <div
          class="sc-ifAKCX dUfgxM"
        >
          <h2
            class="bp3-heading sc-bxivhb jFEWwS"
          >
            Round 1
          </h2>
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Ballot Retrieval List: 
            379
             Total Ballots
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            <p>
              Contest 
              1
              : 
              379
               ballots
            </p>
          </div>
          <button
            class="bp3-button sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Aggregated Ballot Retrieval List for Round 
              1
            </span>
          </button>
          <button
            class="bp3-button sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Placeholders for Round 
              1
            </span>
          </button>
          <button
            class="bp3-button sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Label Sheets for Round 
              1
            </span>
          </button>
          <div
            class="sc-bdVaJa fdbLH"
          >
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Contest 1: contest name
            </h3>
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Audited Results: Round 
              1
              , Contest 
              1
               
              COMPLETE
            </h3>
            <div
              class="sc-gqjmRU bKjpgI"
            >
              <div
                class="sc-jTzLTM hJXymL"
              >
                <label
                  class="sc-VigVT guVKvv"
                >
                  Risk Limit: 
                </label>
                1
                %
              </div>
              <div
                class="sc-jTzLTM hJXymL"
              >
                <label
                  class="sc-VigVT guVKvv"
                >
                  P-value: 
                </label>
                 
                0.00020431431380638307
              </div>
            </div>
            <div
              class="sc-gqjmRU bKjpgI"
            >
              <div
                class="sc-jTzLTM hJXymL"
              >
                <label
                  class="sc-VigVT guVKvv"
                  for="round-0-contest-0-choice-choice-1"
                >
                  choice one
                </label>
                <div
                  class="sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      id="round-0-contest-0-choice-choice-1"
                      name="contests[0][choice-1]"
                      style="padding-right: 10px;"
                      value="100"
                    />
                  </div>
                </div>
              </div>
              <div
                class="sc-jTzLTM hJXymL"
              >
                <label
                  class="sc-VigVT guVKvv"
                  for="round-0-contest-0-choice-choice-2"
                >
                  choice two
                </label>
                <div
                  class="sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      id="round-0-contest-0-choice-choice-2"
                      name="contests[0][choice-2]"
                      style="padding-right: 10px;"
                      value="167"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bdVaJa fdbLH"
          >
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Audit Progress: 
              1
               of 
              1
               
              complete
            </h3>
          </div>
          <div
            class="sc-bdVaJa fdbLH"
          >
            <button
              class="bp3-button bp3-intent-success sc-EHOje fJvKPB"
              data-testid="submit-form-three"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Download Audit Report
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      data-testid="form-three-1"
    >
      <hr />
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Round 1
        </h2>
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Ballot Retrieval List: 
          379
           Total Ballots
        </h3>
        <div
          class="sc-bwzfXH izcbHX"
        >
          <p>
            Contest 
            1
            : 
            379
             ballots
          </p>
        </div>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Aggregated Ballot Retrieval List for Round 
            1
          </span>
        </button>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Placeholders for Round 
            1
          </span>
        </button>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Label Sheets for Round 
            1
          </span>
        </button>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Contest 1: contest name
          </h3>
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Audited Results: Round 
            1
            , Contest 
            1
             
            COMPLETE
          </h3>
          <div
            class="sc-gqjmRU bKjpgI"
          >
            <div
              class="sc-jTzLTM hJXymL"
            >
              <label
                class="sc-VigVT guVKvv"
              >
                Risk Limit: 
              </label>
              1
              %
            </div>
            <div
              class="sc-jTzLTM hJXymL"
            >
              <label
                class="sc-VigVT guVKvv"
              >
                P-value: 
              </label>
               
              0.00020431431380638307
            </div>
          </div>
          <div
            class="sc-gqjmRU bKjpgI"
          >
            <div
              class="sc-jTzLTM hJXymL"
            >
              <label
                class="sc-VigVT guVKvv"
                for="round-0-contest-0-choice-choice-1"
              >
                choice one
              </label>
              <div
                class="sc-bZQynM iEAxBy"
              >
                <div
                  class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    id="round-0-contest-0-choice-choice-1"
                    name="contests[0][choice-1]"
                    style="padding-right: 10px;"
                    value="100"
                  />
                </div>
              </div>
            </div>
            <div
              class="sc-jTzLTM hJXymL"
            >
              <label
                class="sc-VigVT guVKvv"
                for="round-0-contest-0-choice-choice-2"
              >
                choice two
              </label>
              <div
                class="sc-bZQynM iEAxBy"
              >
                <div
                  class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    id="round-0-contest-0-choice-choice-2"
                    name="contests[0][choice-2]"
                    style="padding-right: 10px;"
                    value="167"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Audit Progress: 
            1
             of 
            1
             
            complete
          </h3>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <button
            class="bp3-button bp3-intent-success sc-EHOje fJvKPB"
            data-testid="submit-form-three"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Audit Report
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CalculateRiskMeasurement renders completion in first round with loading correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        data-testid="form-three-1"
      >
        <hr />
        <div
          class="sc-ifAKCX dUfgxM"
        >
          <h2
            class="bp3-heading sc-bxivhb jFEWwS"
          >
            Round 1
          </h2>
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Ballot Retrieval List: 
            379
             Total Ballots
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            <p>
              Contest 
              1
              : 
              379
               ballots
            </p>
          </div>
          <button
            class="bp3-button sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Aggregated Ballot Retrieval List for Round 
              1
            </span>
          </button>
          <button
            class="bp3-button sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Placeholders for Round 
              1
            </span>
          </button>
          <button
            class="bp3-button sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Label Sheets for Round 
              1
            </span>
          </button>
          <div
            class="sc-bdVaJa fdbLH"
          >
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Contest 1: contest name
            </h3>
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Audited Results: Round 
              1
              , Contest 
              1
               
              COMPLETE
            </h3>
            <div
              class="sc-gqjmRU bKjpgI"
            >
              <div
                class="sc-jTzLTM hJXymL"
              >
                <label
                  class="sc-VigVT guVKvv"
                >
                  Risk Limit: 
                </label>
                1
                %
              </div>
              <div
                class="sc-jTzLTM hJXymL"
              >
                <label
                  class="sc-VigVT guVKvv"
                >
                  P-value: 
                </label>
                 
                0.00020431431380638307
              </div>
            </div>
            <div
              class="sc-gqjmRU bKjpgI"
            >
              <div
                class="sc-jTzLTM hJXymL"
              >
                <label
                  class="sc-VigVT guVKvv"
                  for="round-0-contest-0-choice-choice-1"
                >
                  choice one
                </label>
                <div
                  class="sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      id="round-0-contest-0-choice-choice-1"
                      name="contests[0][choice-1]"
                      style="padding-right: 10px;"
                      value="100"
                    />
                  </div>
                </div>
              </div>
              <div
                class="sc-jTzLTM hJXymL"
              >
                <label
                  class="sc-VigVT guVKvv"
                  for="round-0-contest-0-choice-choice-2"
                >
                  choice two
                </label>
                <div
                  class="sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      id="round-0-contest-0-choice-choice-2"
                      name="contests[0][choice-2]"
                      style="padding-right: 10px;"
                      value="167"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bdVaJa fdbLH"
          >
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Audit Progress: 
              1
               of 
              1
               
              complete
            </h3>
          </div>
          <div
            class="bp3-spinner"
          >
            <div
              class="bp3-spinner-animation"
            >
              <svg
                height="50"
                stroke-width="8.00"
                viewBox="1.00 1.00 98.00 98.00"
                width="50"
              >
                <path
                  class="bp3-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp3-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-bdVaJa fdbLH"
          >
            <button
              class="bp3-button bp3-intent-success sc-EHOje fJvKPB"
              data-testid="submit-form-three"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Download Audit Report
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      data-testid="form-three-1"
    >
      <hr />
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Round 1
        </h2>
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Ballot Retrieval List: 
          379
           Total Ballots
        </h3>
        <div
          class="sc-bwzfXH izcbHX"
        >
          <p>
            Contest 
            1
            : 
            379
             ballots
          </p>
        </div>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Aggregated Ballot Retrieval List for Round 
            1
          </span>
        </button>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Placeholders for Round 
            1
          </span>
        </button>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Label Sheets for Round 
            1
          </span>
        </button>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Contest 1: contest name
          </h3>
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Audited Results: Round 
            1
            , Contest 
            1
             
            COMPLETE
          </h3>
          <div
            class="sc-gqjmRU bKjpgI"
          >
            <div
              class="sc-jTzLTM hJXymL"
            >
              <label
                class="sc-VigVT guVKvv"
              >
                Risk Limit: 
              </label>
              1
              %
            </div>
            <div
              class="sc-jTzLTM hJXymL"
            >
              <label
                class="sc-VigVT guVKvv"
              >
                P-value: 
              </label>
               
              0.00020431431380638307
            </div>
          </div>
          <div
            class="sc-gqjmRU bKjpgI"
          >
            <div
              class="sc-jTzLTM hJXymL"
            >
              <label
                class="sc-VigVT guVKvv"
                for="round-0-contest-0-choice-choice-1"
              >
                choice one
              </label>
              <div
                class="sc-bZQynM iEAxBy"
              >
                <div
                  class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    id="round-0-contest-0-choice-choice-1"
                    name="contests[0][choice-1]"
                    style="padding-right: 10px;"
                    value="100"
                  />
                </div>
              </div>
            </div>
            <div
              class="sc-jTzLTM hJXymL"
            >
              <label
                class="sc-VigVT guVKvv"
                for="round-0-contest-0-choice-choice-2"
              >
                choice two
              </label>
              <div
                class="sc-bZQynM iEAxBy"
              >
                <div
                  class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    id="round-0-contest-0-choice-choice-2"
                    name="contests[0][choice-2]"
                    style="padding-right: 10px;"
                    value="167"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Audit Progress: 
            1
             of 
            1
             
            complete
          </h3>
        </div>
        <div
          class="bp3-spinner"
        >
          <div
            class="bp3-spinner-animation"
          >
            <svg
              height="50"
              stroke-width="8.00"
              viewBox="1.00 1.00 98.00 98.00"
              width="50"
            >
              <path
                class="bp3-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp3-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <button
            class="bp3-button bp3-intent-success sc-EHOje fJvKPB"
            data-testid="submit-form-three"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Audit Report
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CalculateRiskMeasurement renders first round correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        data-testid="form-three-1"
      >
        <hr />
        <div
          class="sc-ifAKCX dUfgxM"
        >
          <h2
            class="bp3-heading sc-bxivhb jFEWwS"
          >
            Round 1
          </h2>
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Ballot Retrieval List: 
            379
             Total Ballots
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            <p>
              Contest 
              1
              : 
              379
               ballots
            </p>
          </div>
          <button
            class="bp3-button sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Aggregated Ballot Retrieval List for Round 
              1
            </span>
          </button>
          <button
            class="bp3-button sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Placeholders for Round 
              1
            </span>
          </button>
          <button
            class="bp3-button sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Label Sheets for Round 
              1
            </span>
          </button>
          <div
            class="sc-bdVaJa fdbLH"
          >
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Contest 1: contest name
            </h3>
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Audited Results: Round 
              1
              , Contest 
              1
               
              INCOMPLETE
            </h3>
            <div
              class="sc-bwzfXH izcbHX"
            >
              Enter the number of votes recorded for each candidate/choice in the audited ballots for Round 
              1
              , Contest 
              1
            </div>
            <div
              class="sc-gqjmRU bKjpgI"
            >
              <div
                class="sc-jTzLTM hJXymL"
              >
                <label
                  class="sc-VigVT guVKvv"
                  for="round-0-contest-0-choice-choice-1"
                >
                  choice one
                </label>
                <div
                  class="sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      id="round-0-contest-0-choice-choice-1"
                      name="contests[0][choice-1]"
                      style="padding-right: 10px;"
                      value="0"
                    />
                  </div>
                </div>
              </div>
              <div
                class="sc-jTzLTM hJXymL"
              >
                <label
                  class="sc-VigVT guVKvv"
                  for="round-0-contest-0-choice-choice-2"
                >
                  choice two
                </label>
                <div
                  class="sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      id="round-0-contest-0-choice-choice-2"
                      name="contests[0][choice-2]"
                      style="padding-right: 10px;"
                      value="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bdVaJa fdbLH"
          >
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Audit Progress: 
              0
               of 
              1
               
              complete
            </h3>
          </div>
          <div
            class="sc-gZMcBi DmELe"
          >
            <button
              class="bp3-button bp3-intent-primary sc-EHOje fJvKPB"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Calculate Risk Measurement
              </span>
            </button>
          </div>
          <div
            class="sc-bdVaJa fdbLH"
          />
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      data-testid="form-three-1"
    >
      <hr />
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Round 1
        </h2>
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Ballot Retrieval List: 
          379
           Total Ballots
        </h3>
        <div
          class="sc-bwzfXH izcbHX"
        >
          <p>
            Contest 
            1
            : 
            379
             ballots
          </p>
        </div>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Aggregated Ballot Retrieval List for Round 
            1
          </span>
        </button>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Placeholders for Round 
            1
          </span>
        </button>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Label Sheets for Round 
            1
          </span>
        </button>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Contest 1: contest name
          </h3>
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Audited Results: Round 
            1
            , Contest 
            1
             
            INCOMPLETE
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the number of votes recorded for each candidate/choice in the audited ballots for Round 
            1
            , Contest 
            1
          </div>
          <div
            class="sc-gqjmRU bKjpgI"
          >
            <div
              class="sc-jTzLTM hJXymL"
            >
              <label
                class="sc-VigVT guVKvv"
                for="round-0-contest-0-choice-choice-1"
              >
                choice one
              </label>
              <div
                class="sc-bZQynM iEAxBy"
              >
                <div
                  class="bp3-input-group sc-gzVnrw htprzv"
                >
                  <input
                    class="bp3-input"
                    id="round-0-contest-0-choice-choice-1"
                    name="contests[0][choice-1]"
                    style="padding-right: 10px;"
                    value="0"
                  />
                </div>
              </div>
            </div>
            <div
              class="sc-jTzLTM hJXymL"
            >
              <label
                class="sc-VigVT guVKvv"
                for="round-0-contest-0-choice-choice-2"
              >
                choice two
              </label>
              <div
                class="sc-bZQynM iEAxBy"
              >
                <div
                  class="bp3-input-group sc-gzVnrw htprzv"
                >
                  <input
                    class="bp3-input"
                    id="round-0-contest-0-choice-choice-2"
                    name="contests[0][choice-2]"
                    style="padding-right: 10px;"
                    value="0"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Audit Progress: 
            0
             of 
            1
             
            complete
          </h3>
        </div>
        <div
          class="sc-gZMcBi DmELe"
        >
          <button
            class="bp3-button bp3-intent-primary sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Calculate Risk Measurement
            </span>
          </button>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        />
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CalculateRiskMeasurement renders first round with loading correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        data-testid="form-three-1"
      >
        <hr />
        <div
          class="sc-ifAKCX dUfgxM"
        >
          <h2
            class="bp3-heading sc-bxivhb jFEWwS"
          >
            Round 1
          </h2>
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Ballot Retrieval List: 
            379
             Total Ballots
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            <p>
              Contest 
              1
              : 
              379
               ballots
            </p>
          </div>
          <button
            class="bp3-button sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Aggregated Ballot Retrieval List for Round 
              1
            </span>
          </button>
          <button
            class="bp3-button sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Placeholders for Round 
              1
            </span>
          </button>
          <button
            class="bp3-button sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Download Label Sheets for Round 
              1
            </span>
          </button>
          <div
            class="sc-bdVaJa fdbLH"
          >
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Contest 1: contest name
            </h3>
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Audited Results: Round 
              1
              , Contest 
              1
               
              INCOMPLETE
            </h3>
            <div
              class="sc-bwzfXH izcbHX"
            >
              Enter the number of votes recorded for each candidate/choice in the audited ballots for Round 
              1
              , Contest 
              1
            </div>
            <div
              class="sc-gqjmRU bKjpgI"
            >
              <div
                class="sc-jTzLTM hJXymL"
              >
                <label
                  class="sc-VigVT guVKvv"
                  for="round-0-contest-0-choice-choice-1"
                >
                  choice one
                </label>
                <div
                  class="sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      id="round-0-contest-0-choice-choice-1"
                      name="contests[0][choice-1]"
                      style="padding-right: 10px;"
                      value="0"
                    />
                  </div>
                </div>
              </div>
              <div
                class="sc-jTzLTM hJXymL"
              >
                <label
                  class="sc-VigVT guVKvv"
                  for="round-0-contest-0-choice-choice-2"
                >
                  choice two
                </label>
                <div
                  class="sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      id="round-0-contest-0-choice-choice-2"
                      name="contests[0][choice-2]"
                      style="padding-right: 10px;"
                      value="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bdVaJa fdbLH"
          >
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Audit Progress: 
              0
               of 
              1
               
              complete
            </h3>
          </div>
          <div
            class="bp3-spinner"
          >
            <div
              class="bp3-spinner-animation"
            >
              <svg
                height="50"
                stroke-width="8.00"
                viewBox="1.00 1.00 98.00 98.00"
                width="50"
              >
                <path
                  class="bp3-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp3-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
          <div
            class="sc-bdVaJa fdbLH"
          />
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      data-testid="form-three-1"
    >
      <hr />
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Round 1
        </h2>
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Ballot Retrieval List: 
          379
           Total Ballots
        </h3>
        <div
          class="sc-bwzfXH izcbHX"
        >
          <p>
            Contest 
            1
            : 
            379
             ballots
          </p>
        </div>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Aggregated Ballot Retrieval List for Round 
            1
          </span>
        </button>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Placeholders for Round 
            1
          </span>
        </button>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Label Sheets for Round 
            1
          </span>
        </button>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Contest 1: contest name
          </h3>
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Audited Results: Round 
            1
            , Contest 
            1
             
            INCOMPLETE
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the number of votes recorded for each candidate/choice in the audited ballots for Round 
            1
            , Contest 
            1
          </div>
          <div
            class="sc-gqjmRU bKjpgI"
          >
            <div
              class="sc-jTzLTM hJXymL"
            >
              <label
                class="sc-VigVT guVKvv"
                for="round-0-contest-0-choice-choice-1"
              >
                choice one
              </label>
              <div
                class="sc-bZQynM iEAxBy"
              >
                <div
                  class="bp3-input-group sc-gzVnrw htprzv"
                >
                  <input
                    class="bp3-input"
                    id="round-0-contest-0-choice-choice-1"
                    name="contests[0][choice-1]"
                    style="padding-right: 10px;"
                    value="0"
                  />
                </div>
              </div>
            </div>
            <div
              class="sc-jTzLTM hJXymL"
            >
              <label
                class="sc-VigVT guVKvv"
                for="round-0-contest-0-choice-choice-2"
              >
                choice two
              </label>
              <div
                class="sc-bZQynM iEAxBy"
              >
                <div
                  class="bp3-input-group sc-gzVnrw htprzv"
                >
                  <input
                    class="bp3-input"
                    id="round-0-contest-0-choice-choice-2"
                    name="contests[0][choice-2]"
                    style="padding-right: 10px;"
                    value="0"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Audit Progress: 
            0
             of 
            1
             
            complete
          </h3>
        </div>
        <div
          class="bp3-spinner"
        >
          <div
            class="bp3-spinner-animation"
          >
            <svg
              height="50"
              stroke-width="8.00"
              viewBox="1.00 1.00 98.00 98.00"
              width="50"
            >
              <path
                class="bp3-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp3-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        />
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
